<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2000000"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/alarmLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/exchangeRateAlarmInfoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/Exchange_rate_title"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/cryptoCurrencyTypeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/BTC"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cryptoAlarmTypeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/has_fallen_below"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/exchangeRateValueTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/alarmLL"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/dash"
        android:textColor="@android:color/white"
        android:textSize="48sp" />

    <Button
        android:id="@+id/turnOffAlarmBtt"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Turn_of_the_alarm"
        android:textColor="@android:color/white"
        android:textSize="16sp" />


</RelativeLayout>