<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/alarm_settings_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/AlertDialog.AppCompat.Light"
        app:title="@string/app_name" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/alarm_settings_activity_toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical">

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    card_view:cardCornerRadius="2dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/alarmTypeTV"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="sans-serif-condensed"
                                    android:gravity="center_vertical"
                                    android:text="@string/Alarm_type"
                                    android:textStyle="bold" />

                                <Spinner
                                    android:id="@+id/alarmTypeSpinner"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />

                            </LinearLayout>

                            <CheckBox
                                android:id="@+id/trackCheckBox"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-condensed"
                                android:text="@string/track_exchange" />

                            <CheckBox
                                android:id="@+id/vibrationCheckBox"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-condensed"
                                android:text="@string/Vibration_alarm" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/cryptocurrencyTV"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="sans-serif-condensed"
                                    android:gravity="center_vertical"
                                    android:text="@string/Cryptoccurrency"
                                    android:textStyle="bold" />

                                <Spinner
                                    android:id="@+id/cryptocurrencySpinner"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/currencyTV"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="sans-serif-condensed"
                                    android:gravity="center_vertical"
                                    android:text="@string/Currency"
                                    android:textStyle="bold" />

                                <Spinner
                                    android:id="@+id/currencySpinner"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/limitTV"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="sans-serif-condensed"
                                    android:gravity="center_vertical"
                                    android:text="@string/Limit_value"
                                    android:textStyle="bold" />

                                <EditText
                                    android:id="@+id/limitValueET"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="sans-serif-condensed"
                                    android:inputType="numberDecimal" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/refreshFrequencyLinearLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/limitTV"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/refreshFrequencyTV"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="sans-serif-condensed"
                                    android:text="@string/Refresh_every_30_3600"
                                    android:textStyle="bold" />

                                <EditText
                                    android:id="@+id/refreshFrequencyValueET"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:fontFamily="sans-serif-condensed"
                                    android:inputType="numberSigned"
                                    android:maxLines="1"
                                    android:text="@string/default_refresh_value" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="sans-serif-condensed"
                                    android:text="@string/sec"
                                    android:textColor="@android:color/black" />

                            </LinearLayout>


                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/alarmSoundTV"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="sans-serif-condensed"
                                    android:text="@string/Alarm_sound"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/alarmSoundValueTV"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="6dp"
                                    android:layout_marginLeft="6dp"
                                    android:fontFamily="sans-serif-condensed"
                                    android:text="@string/alarm_sound_default"
                                    android:textColor="@android:color/black"
                                    android:textSize="16sp" />

                            </LinearLayout>


                            <Button
                                android:id="@+id/chooseAlarmSoundBtt"
                                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-condensed"
                                android:text="@string/Choose_alarm_sound" />

                        </LinearLayout>
                    </RelativeLayout>


                </android.support.v7.widget.CardView>


                <Button
                    android:id="@+id/saveAndExitBtt"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/Save_and_exit" />


            </LinearLayout>


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>