<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:scrollbars="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calc2Instruction" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/buyForTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/Investment_amount"
                        android:textStyle="bold"
                        app:fontFamily="sans-serif-condensed" />

                    <EditText
                        android:id="@+id/buyForValueET"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="numberDecimal"
                        app:fontFamily="sans-serif-condensed" />

                    <Spinner
                        android:id="@+id/currencySpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:fontFamily="sans-serif-condensed" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/buyExchangeRatingTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/Purchase_rate"
                        android:textStyle="bold"
                        app:fontFamily="sans-serif-condensed" />

                    <EditText
                        android:id="@+id/buyExchangeRatingValueET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        app:fontFamily="sans-serif-condensed" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/iWantToEarnTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/iWantToEarn"
                        android:textStyle="bold"
                        app:fontFamily="sans-serif-condensed" />

                    <EditText
                        android:id="@+id/iWantToEarnValueET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        app:fontFamily="sans-serif-condensed" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dealProvisionLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/dealProvisionTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Transaction_provision"
                        android:textStyle="bold"
                        app:fontFamily="sans-serif-condensed" />

                    <EditText
                        android:id="@+id/dealProvisionValueET"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="numberDecimal"
                        android:text="@string/default_provision_value"
                        app:fontFamily="sans-serif-condensed" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/percent"
                        android:textStyle="bold"
                        app:fontFamily="sans-serif-condensed" />
                </LinearLayout>
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/countProfitBtt"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="12dp"
            android:text="@string/Count"
            app:fontFamily="sans-serif-condensed" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1.0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/youWillGainValueTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/dash"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:fontFamily="sans-serif-condensed" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/You_will_receive"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:fontFamily="sans-serif-condensed" />
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1.0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/sellRateValueTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/dash"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:fontFamily="sans-serif-condensed" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/Sell_rate_title"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:fontFamily="sans-serif-condensed" />
                </LinearLayout>


            </android.support.v7.widget.CardView>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1.0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/noLossRateValueTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/dash"
                        android:textColor="#FB8C00"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:fontFamily="sans-serif-condensed" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/No_lose_exchange_rate"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:fontFamily="sans-serif-condensed" />
                </LinearLayout>


            </android.support.v7.widget.CardView>


        </LinearLayout>


    </LinearLayout>

</ScrollView>