<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/alarm_notification_layout"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:padding="12dp">


    <ImageView
        android:id="@+id/appIconIV"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="2dp"
        android:contentDescription="@string/App"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/appIconIV"
        android:fontFamily="sans-serif-condensed"
        android:layout_toRightOf="@id/appIconIV"
        android:orientation="vertical">

        <TextView
            android:id="@+id/alarmTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/track_exchange"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/refreshedTimeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/Refreshed"
            android:textSize="12sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/actualExchangeRatingValueTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_vertical"
        android:textSize="14sp"
        android:textStyle="bold"/>




</RelativeLayout>